/**
 * Copyright (c) 2015 - The CM Authors <legal@clickmatcher.com>
 *   All Rights Reserved.
 *
 * This file is CONFIDENTIAL -- Distribution or duplication of this material or
 * the information contained herein is strictly forbidden unless prior written
 * permission is obtained.
 */
package cm;

message ShopProductStatsProduct {
  required string product_id = 1;
}

message ShopProductStats {
  optional uint64 total_product_page_impressions = 1;

  repeated ShopProductStatsProduct products = 2;
}


